--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -102,7 +102,7 @@
                                  </div>
                                 <div class="row">
                                     <div class="col-12">
-                                            <a href="{% url 'products' %}" class="btn black-btn mobile-padding">Keep Shopping</a>
+                                            <a href="{% url 'products' %}" class="btn black-btn mobile-padding-product">Keep Shopping</a>
                                             <input type="submit" class="btn green-btn" value="Add to Bag">
                                         </div>
                                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
