--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -33,7 +33,7 @@
                             </form>
                         </div>
                         <div class="col-12 col-lg-6">
-                            <p class="text-muted">Order History</p>
+                            <p class="order-history-text text-muted">Order History</p>
                             <div class="order-history table-responsive">
                                 <table class="table table-sm table-borderless">
                                     <thead>
