--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -16,7 +16,7 @@
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <a class="btn black-btn" href="{% url 'account_login' %}">Back to Login</a>
+                <a class="btn black-btn mobile-padding" href="{% url 'account_login' %}">Back to Login</a>
                 <input class="btn green-btn" type="submit" name="action" value="{% trans 'Change password' %}"/>
             </form>
         {% else %}
