--- a/static/css/base.css
+++ b/static/css/base.css
@@ -55,6 +55,9 @@ h2 {
 h3 {
    font-size: 1.3rem;
 }
+h4 {
+   font-size: 1.2rem;
+}
 /* ----- Start of Color palette ----- */
 /* --- Global --- */
 body {
@@ -479,6 +482,9 @@ input[name='q']::placeholder {
     }
     h3 {
         font-size: 1.2rem;
+    }
+    h4 {
+        font-size: 1.1rem;
     }
     .product-name {
         font-size: 1.6rem;
