refactor: Update delete news item modal for bootstrap 5

--- a/news/templates/news/news_item.html
+++ b/news/templates/news/news_item.html
@@ -38,24 +38,25 @@
                                     <p class="text-muted">Posted By: {{ news_item.user }} on the {{ news_item.create_date }}</p>
                                     {% if news_item.user == request.user or request.user.is_superuser %}
                                         <a class="btn green-btn" href="{% url 'edit_news_item' news_item.id %}" role="button">Edit</a>
-                                        <button type="button" class="btn black-btn" data-toggle="modal"
-                                        data-target="#deleteNewsItem">
+                                        <button type="button" class="btn black-btn" data-bs-toggle="modal"
+                                        data-bs-target="#deleteNewsItem">
                                         Delete</button>
                                         <!-- Delete Button Modal -->
                                         <div class="modal fade" id="deleteNewsItem" tabindex="-1" role="dialog" aria-labelledby="deleteNewsItem" aria-hidden="true">
                                             <div class="modal-dialog modal-dialog-centered" role="document">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
-                                                        <h5>Delete News Item {{ news_item.title }} </h5>
-                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                            <span aria-hidden="true">&times;</span>
-                                                        </button>
+                                                        <h4>Delete News Item {{ news_item.title }} </h4>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                                     </div>
                                                     <div class="modal-body">
                                                         You are about to delete Title ({{ news_item.title }}) and all
-                                                        ({{ comments|length }}) user comments, are you sure??
+                                                        ({{ comments|length }}) user comments, can you confirm?
                                                     </div>
                                                     <div class="modal-footer">
+                                                        <!-- Close and delete product buttons-->
+                                                        <button type="button" class="btn black-btn" data-bs-dismiss="modal">Close</button>
+                                                        <a href="{% url 'delete_news_item' news_item.id %}" class="btn red-btn">Delete</a>
                                                     </div>
                                                 </div>
                                             </div>
