refactor: Remove text info class that was causing wave contrast errors

--- a/news/templates/news/news_item.html
+++ b/news/templates/news/news_item.html
@@ -148,8 +148,8 @@
                                         </form>
                                 {% else %}
                                     <div>
-                                        <a class="text-info" href="{% url 'account_signup' %}">Create an account</a> or
-                                        <a class="text-info" href="{% url 'account_login' %}">login</a> to comment on this post.
+                                        <a href="{% url 'account_signup' %}">Create an account</a> or
+                                        <a href="{% url 'account_login' %}">login</a> to comment on this post.
                                     </div>
                                 {% endif %}
                             </div>
