--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -65,7 +65,7 @@
                                                         {% endfor %}
                                                     </ul>
                                                 </td>
-                                                <td>${{ order.grand_total }}</td>
+                                                <td>€{{ order.grand_total }}</td>
                                             </tr>
                                         {% endfor %}
                                     </tbody>
