--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -123,8 +123,8 @@
                                 </a>
                             </p>
                             {% endif %}
-                            {% if average_rating_rounded != 0 %}
-                                <small class="text-muted"><i class="fas fa-star mr-1"></i> {{ average_rating_rounded }} / 5.0</small>
+                            {% if product.rating != 0 %}
+                                <small class="text-muted"><i class="fas fa-star mr-1"></i> {{ product.rating }} / 5.0</small>
                             {% else %}
                                 <small class="text-muted">No Rating, be the first to rate below</small>
                             {% endif %}
@@ -196,7 +196,7 @@
                                             <p class="font-weight-bold mb-2 mt-3">Posted by: {{ review.user }} on {{ review.create_date }}</p>
                                             <p class="text-black mb-2 mt-3">Rating: {{ review.product_rating }} </p>
                                         <p class="text-black mb-2 mt-3">Review Text: {{ review.review_text }}</p>
-                                            {% if comment.user == request.user or request.user.is_superuser %}
+                                            {% if review.user == request.user or request.user.is_superuser %}
                                             <!-- Delete Button trigger modal -->
                                             <button type="button" class="btn black-btn" data-bs-toggle="modal"
                                                 data-bs-target="#delete-review{{ review.id }}">
@@ -227,6 +227,32 @@
                                         </div>
                                     {% endfor %}
                                 </div>
+                                {% if reviews.has_other_pages %}
+                                <!-- Pagination -->
+                                <div class="pagination-holder p-4">
+                                    <nav aria-label="reviews paginated">
+                                        <ul class="pagination">
+                                            {% if reviews.has_previous %}
+                                              <li class="page-item"><a class="page-link" href="?page={{ reviews.previous_page_number }}">Previous</a></li>
+                                            {% else %}
+                                              <li class="disabled page-item"><span class="page-link">Previous</span></li>
+                                            {% endif %}
+                                            {% for i in reviews.paginator.page_range %}
+                                              {% if reviews.number == i %}
+                                                <li class="page-item active"><span class="page-link">{{ i }} <span class="sr-only">(current)</span></span></li>
+                                              {% else %}
+                                                <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                                              {% endif %}
+                                            {% endfor %}
+                                            {% if reviews.has_next %}
+                                              <li class="page-item"><a class="page-link" href="?page={{ reviews.next_page_number }}">Next</a></li>
+                                            {% else %}
+                                              <li class="disabled page-item"><span class="page-link">Next</span></li>
+                                            {% endif %}
+                                        </ul>
+                                    </nav>
+                                </div>
+                                {% endif %}
                             </div>
                             <!-- Comment Form -->
                             <div class="row pb-5">
