refactor: Fixed minor typo in pagination html

--- a/news/templates/news/news_item.html
+++ b/news/templates/news/news_item.html
@@ -106,7 +106,7 @@
                                 </div>
                                 {% endfor %}
                             </div>
-                            {% if reviews.has_other_pages %}
+                            {% if comments.has_other_pages %}
                             <!-- Pagination -->
                             <div class="pagination-holder p-4">
                                 <nav aria-label="news items paginated">
